Implemented weekly allocation table feature in both backend and frontend, including new endpoints for managing weekly allocations and resource profiles. Enhanced AllocationController and ScopeController with new methods for weekly allocation updates and checks for allocation generation capability. Updated AllocationService to derive weekly allocations and integrated new DTOs for resource profiles. Modified frontend components to display weekly allocation data and added tests for new functionalities. Updated project status documentation to reflect completion of the weekly allocation table feature with all tests passing.